update ATM project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /XML_JAXBGenJavaFromXML/build/
 /XML_JAXB_CaseStudy1/nbproject/private/
 /XML_JAXB_CaseStudy1/build/
+/PracXML/nbproject/private/
+/PracXML/build/
+/PracXML/dist/
+/ATM/nbproject/private/
+/ATM/build/
