update recipe, ingredient, domain schema and re-generate jaxb

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 /ProjectPRXDev/build/
 /ProjectPRXDev/dist/
 /CookingIsFun/nbproject/private/
+/CookingIsFun/build/
+/CookingIsFun/dist/
+/HelloWorld/nbproject/private/
