--- a/CookingIsFun/nbproject/project.properties
+++ b/CookingIsFun/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.log4j-1.2.17.jar=D:\\Downloads\\zip_files\\apache-log4j-1.2.17\\log4j-1.2.17.jar
+file.reference.sqljdbc42.jar=D:\\Important Files\\sqljdbc_4.2\\enu\\jre8\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
@@ -38,7 +40,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jaxb.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
