--- a/CookingIsFun/web/WEB-INF/web.xml
+++ b/CookingIsFun/web/WEB-INF/web.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <listener>
+        <description>ServletContextListener</description>
+        <listener-class>com.cooking.dev.listener.MyServletListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>FrontController</servlet-name>
         <servlet-class>com.cooking.dev.controller.FrontController</servlet-class>
@@ -13,4 +17,11 @@
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>FrontController</welcome-file>
+    </welcome-file-list>
+    <context-param>
+        <param-name>log4j-config-location</param-name>
+        <param-value>WEB-INF/config/log4j.xml</param-value>
+    </context-param>
 </web-app>
