--- a/PracXML/nbproject/project.properties
+++ b/PracXML/nbproject/project.properties
@@ -14,6 +14,7 @@ build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
 client.urlPart=
 compile.jsps=false
+compile.on.save.unsupported.jaxb=true
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
 debug.test.classpath=\
@@ -37,7 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${libs.jaxb.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -63,6 +65,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.gensrc.classpath=${libs.jaxb.classpath}
+jaxbwiz.xjcdef.classpath=${libs.jaxb.classpath}
+jaxbwiz.xjcrun.classpath=${libs.jaxb.classpath}
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
