--- a/XML_DomXPathAPI/nbproject/private/private.properties
+++ b/XML_DomXPathAPI/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\huynh\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
 j2ee.server.domain=C:/Users/huynh/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=E:/FPT_UNIVERSITY/apache-tomcat-9.0.33
-j2ee.server.instance=tomcat90:home=E:\\FPT_UNIVERSITY\\apache-tomcat-9.0.33
+j2ee.server.home=E:/FPT_UNIVERSITY/lib/apache-tomcat-9.0.33
+j2ee.server.instance=tomcat90:home=E:\\FPT_UNIVERSITY\\lib\\apache-tomcat-9.0.33
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\huynh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
