--- a/CookingIsFun/nbproject/project.properties
+++ b/CookingIsFun/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.fop.jar=D:\\Downloads\\zip_files\\fop-1.0-bin\\fop-1.0\\build\\fop.jar
 file.reference.log4j-1.2.17.jar=D:\\Downloads\\zip_files\\apache-log4j-1.2.17\\log4j-1.2.17.jar
 file.reference.sqljdbc42.jar=D:\\Important Files\\sqljdbc_4.2\\enu\\jre8\\sqljdbc42.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${libs.MyLibrary.classpath}
+    ${libs.MyLibrary.classpath}:\
+    ${file.reference.fop.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
